@@ -103,7 +103,7 @@ return __retval;
 private native static double __m9(long __imp, double JD);
 public CAADynamicalTime() {
 
-implementation = new Long(__cdefault());
+implementation = Long.valueOf(__cdefault());
 
 }
 private native long __cdefault();
