@@ -168,7 +168,7 @@ return __retval;
 private native double __m15(long __imp);
 public CAAEllipticalPlanetaryDetails() {
 
-implementation = new Long(__cdefault());
+implementation = Long.valueOf(__cdefault());
 
 }
 private native long __cdefault();
