@@ -43,7 +43,7 @@ return __retval;
 private native double __m3(long __imp);
 public CAAEquinoxSolsticeDetails2() {
 
-implementation = new Long(__cdefault());
+implementation = Long.valueOf(__cdefault());
 
 }
 private native long __cdefault();
