@@ -136,7 +136,7 @@ return __retval;
 private native static double __m11(long __imp, double Parallax);
 public CAAMoon() {
 
-implementation = new Long(__cdefault());
+implementation = Long.valueOf(__cdefault());
 
 }
 private native long __cdefault();
