@@ -92,7 +92,7 @@ return __retval;
 private native double __m7(long __imp);
 public CAAPhysicalMarsDetails() {
 
-implementation = new Long(__cdefault());
+implementation = Long.valueOf(__cdefault());
 
 }
 private native long __cdefault();
