@@ -9,7 +9,7 @@ public static CAAPhysicalSunDetails Calculate(double JD, boolean bHighPrecision)
 {
 long __retval = 0;
 __retval = __m0(0, JD, bHighPrecision);
-return (__retval == 0 ? null : new CAAPhysicalSunDetails(new Long(__retval)));
+return (__retval == 0 ? null : new CAAPhysicalSunDetails(Long.valueOf(__retval)));
 }
 private native static long __m0(long __imp, double JD, boolean bHighPrecision);
 /**
@@ -25,7 +25,7 @@ return __retval;
 private native static double __m1(long __imp, long C);
 public CAAPhysicalSun() {
 
-implementation = new Long(__cdefault());
+implementation = Long.valueOf(__cdefault());
 
 }
 private native long __cdefault();
