@@ -191,7 +191,7 @@ return __retval;
 private native static double __m16(long __imp, double k);
 public CAAPlanetPerihelionAphelion() {
 
-implementation = new Long(__cdefault());
+implementation = Long.valueOf(__cdefault());
 
 }
 private native long __cdefault();
