@@ -13,7 +13,7 @@ public final static int NEPTUNE = URANUS + 1;
 public final static int PLUTO = NEPTUNE + 1;
 public CAAPlanetPerihelionAphelion2() {
 
-implementation = new Long(__cdefault());
+implementation = Long.valueOf(__cdefault());
 
 }
 private native long __cdefault();
