@@ -136,7 +136,7 @@ return __retval;
 private native double __m11(long __imp);
 public CAASolarEclipseDetails() {
 
-implementation = new Long(__cdefault());
+implementation = Long.valueOf(__cdefault());
 
 }
 private native long __cdefault();
